2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Inline single-use *_box funcs.

	* libpq.c (xc_box, sepo_box): Delete funcs.
	(pg_connectdb): Use `SCM_RETURN_NEWSMOB' directly.
	(pg_make_print_options): Likewise.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Use C macros for smob data access.

	* libpq.c (xc_unbox): Use `SCM_SMOB_DATA'.
	(res_unbox, sepo_unbox): Likewise.
	(xc_free): Use `SCM_SET_SMOB_DATA'.
	(res_free, sepo_free): Likewise.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Elide internal function `make_res'.

	* libpq.c (make_res): Delete func;
	convert all callers to use `res_box (result)' instead.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use guile.m4 facilities from Guile 1.4.1.118.

	* Makefile.am (install-data-hook): Use $(mkmodcat).

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Move Scheme code into src/.

	* postgres-col-defs.scm: Move from ../scm/.
	* postgres-gxrepl.scm: Likewise.
	* postgres-meta.scm: Likewise.
	* postgres-qcons.scm: Likewise.
	* postgres-resdisp.scm: Likewise.
	* postgres-resx.scm: Likewise.
	* postgres-table.scm: Likewise.
	* postgres-types.scm: Likewise.
	* Makefile.am (dotdocfiles): New var.
	(BUILT_SOURCES): Remove libpq.doc; add $(dotdocfiles).
	(dist_d_DATA): New var.
	(.scm.doc): New pattern rule.
	(.doc-index) [MAINTAINER_MODE]: New target.
	(noinst_DATA) [MAINTAINER_MODE]: New var.
	(retired): New variable.
	(install-data-hook): Add check/cleanup for $(retired) files.

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Move C code into src/.

	* bcruft.h: Move from parent dir.
	* fcruft.h: Likewise.
	* modsup.h.snap: Likewise.
	* tmpfile.h: Likewise.
	* tmpfile.c: Likewise.
	* libpq.c: New file, from integrating ../libpostgres.h,
	../libpostgres.c and ../libpostgres_lo.c.
	* Makefile.am: New file.